# FastSRTMaker

./: README.md  install.sh  main.py  pyproject.toml  uninstall.sh
src/: __init__.py  audio_extractor.py  translator.py  whisper_subtitle_generator.py
